remove unused strings

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -53,32 +53,24 @@
     <string name="X_action_update">Aktualizovat</string>
     <string name="X_action_validate">Ověřit</string>
     <string name="X_btn_customize">Přizpůsobit…</string>
-    <string name="X_btn_show_list">Zobrazit seznam</string>
+    <string name="btn_show_list">Zobrazit seznam</string>
     <string name="confirm_continue">Jste si jistý, že chcete pokračovat?</string>
     <string name="X_error_authentication_failed">Ověření se nezdařilo</string>
     <string name="error_record_must_contain_column">Záznam musí obsahovat pole s názvem „%1$s“.</string>
     <string name="X_error_network_site_has_problems">Web má problémy.</string>
     <string name="X_httpErrorIO">Se serverem nelze komunikovat. Zkuste to později.</string>
-    <string name="X_info_authorized_needed">Autorizovat přístup</string>
     <string name="X_info_not_authorized">Neautorizováno</string>
     <string name="X_info_site_authorization_successful">%1$s autorizace v pořádku</string>
     <string name="X_lbl_completed">Kompletní</string>
-    <string name="X_lbl_failed">Neúspěšný</string>
     <string name="X_lbl_folder">Složka</string>
     <string name="X_lbl_image">Obrázek</string>
-    <string name="X_lbl_preferred_styles">Preferované styly</string>
-    <string name="X_lbl_queue">Fronta</string>
-    <string name="X_lbl_queued">Fronta</string>
-    <string name="X_lbl_select_fields_to_update">Zvolit pole k aktualizaci</string>
     <string name="X_lbl_thumbnails">Náhledy</string>
-    <string name="X_lbl_updated">Aktualizováno</string>
     <string name="X_neither">Ani</string>
     <string name="X_option_bob_filter_anthology_no">Všechno kromě Anthologies</string>
     <string name="X_option_bob_filter_anthology_yes">Anthology</string>
     <string name="X_pg_general">Obecné</string>
     <string name="tip_booklist_style_defaults">Na této obrazovce můžete nastavit výchozí vlastnosti všech stylů. Ty jsou používány všemi vestavěnými styly a jako výchozí bod pro jakýkoli styl, který si sami definujete.</string>
     <string name="X_use_default_setting">Použít výchozí nastavení</string>
-    <string name="X_vldt_failed_for_x">Selhala validace pro „%1$s“</string>
     <string name="X_whichImageCaptureApplication">Vyfotit pomocí aplikace</string>
     <string name="X_whichSendToApplication">Odeslat pomocí aplikace</string>
     <string name="a_b">%1$s%2$s</string>
@@ -147,8 +139,6 @@
     <string name="action_more_ellipsis">Více…</string>
     <string name="action_show_options">Možnosti</string>
     <string name="action_show_toc_long">Zobrazit obsah</string>
-    <string name="action_start_export">Spusťte export</string>
-    <string name="action_start_import">Spusťte import</string>
     <string name="action_stop_scanning">Zastavit skenování</string>
     <string name="btn_this_book">Tato kniha</string>
     <string name="size_bytes">%1$.0fB</string>
@@ -302,7 +292,6 @@
     <string name="info_calibre_content_server_extension">Rozšíření serveru s obsahem kalibru není nainstalováno.</string>
     <string name="lbl_certificate_ca">Certifikát CA</string>
     <string name="lbl_certificates">Certifikáty</string>
-    <string name="X_lbl_clear_filters">Vymazat filtry</string>
     <string name="lbl_clone_style">Klonovat styl</string>
     <string name="lbl_book_type_collection">Sbírka</string>
     <string name="lbl_ebook_file_type">Typ souboru elektronické knihy</string>
@@ -412,7 +401,6 @@
     <string name="lbl_read_start">Datum začátku čtení</string>
     <string name="lbl_read_timeout">Časový limit čtení (sekundy)</string>
     <string name="lbl_date_read_year">Rok čtení</string>
-    <string name="X_lbl_registration">%1$s registrace</string>
     <string name="lbl_scope_of_change">Rozsah změny</string>
     <string name="lbl_search_filtered_by_x">Filtrováno podle: %1$s</string>
     <string name="lbl_search_for_books">Hledat knihy</string>
