--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -47,32 +47,24 @@
     <string name="X_action_update">Aktualisieren</string>
     <string name="X_action_validate">Bestätigen</string>
     <string name="X_btn_customize">Anpassen…</string>
-    <string name="X_btn_show_list">Liste anzeigen</string>
+    <string name="btn_show_list">Liste anzeigen</string>
     <string name="confirm_continue">Sind Sie sicher, dass Sie fortfahren möchten?</string>
     <string name="X_error_authentication_failed">Authentifizierung fehlgeschlagen</string>
     <string name="error_record_must_contain_column">Der Datensatz muss ein Feld namens „%1$s“ enthalten.</string>
     <string name="X_error_network_site_has_problems">Die Website hat Probleme.</string>
     <string name="X_httpErrorIO">Kommunikation mit dem Server konnte nicht hergestellt werden. Bitte versuche es später noch einmal.</string>
-    <string name="X_info_authorized_needed">Zugriff autorisieren</string>
     <string name="X_info_not_authorized">Nicht autorisiert</string>
     <string name="X_info_site_authorization_successful">Autorisierung bei %1$s erfolgreich</string>
     <string name="X_lbl_completed">Abgeschlossen</string>
-    <string name="X_lbl_failed">Fehlerhaft</string>
     <string name="X_lbl_folder">Ordner</string>
     <string name="X_lbl_image">Bild</string>
-    <string name="X_lbl_preferred_styles">Bevorzugte Stile</string>
-    <string name="X_lbl_queue">Warteschlange</string>
-    <string name="X_lbl_queued">Eingereiht</string>
-    <string name="X_lbl_select_fields_to_update">Felder für Aktualisierung auswählen</string>
     <string name="X_lbl_thumbnails">Vorschaubilder</string>
-    <string name="X_lbl_updated">Aktualisiert</string>
     <string name="X_neither">Weder</string>
     <string name="X_option_bob_filter_anthology_no">Alle außer Anthologien</string>
     <string name="X_option_bob_filter_anthology_yes">Anthologien</string>
     <string name="X_pg_general">Allgemein</string>
     <string name="tip_booklist_style_defaults">Auf diesem Bildschirm können Sie die Standardmerkmale aller Stile festlegen. Diese werden von allen integrierten Stilen verwendet und dienen als Ausgangspunkt für jeden von Ihnen selbst definierten Stil.</string>
     <string name="X_use_default_setting">Standardeinstellungen verwenden</string>
-    <string name="X_vldt_failed_for_x">Die Überprüfung für „%1$s“ ist fehlgeschlagen</string>
     <string name="X_whichImageCaptureApplication">Bild aufnehmen mit</string>
     <string name="X_whichSendToApplication">Senden via</string>
     <string name="a_b">%1$s%2$s</string>
@@ -141,8 +133,6 @@
     <string name="action_more_ellipsis">Mehr…</string>
     <string name="action_show_options">Optionen</string>
     <string name="action_show_toc_long">Inhaltsverzeichnis anzeigen</string>
-    <string name="action_start_export">Export starten</string>
-    <string name="action_start_import">Import starten</string>
     <string name="action_stop_scanning">Hör auf zu scannen</string>
     <string name="btn_this_book">Dieses Buch</string>
     <string name="size_bytes">%1$.0fB</string>
@@ -287,7 +277,6 @@
     <string name="info_calibre_content_server_extension">Die Calibre-Inhaltsservererweiterung ist nicht installiert.</string>
     <string name="lbl_certificate_ca">CA-Zertifikat</string>
     <string name="lbl_certificates">Zertifikate</string>
-    <string name="X_lbl_clear_filters">Filter löschen</string>
     <string name="lbl_clone_style">Stil klonen</string>
     <string name="lbl_book_type_collection">Sammlung</string>
     <string name="lbl_ebook_file_type">eBook-Dateityp</string>
@@ -397,7 +386,6 @@
     <string name="lbl_read_start">Datum mit Lesen begonnen</string>
     <string name="lbl_read_timeout">Zeitüberschreitung beim Lesen (Sekunden)</string>
     <string name="lbl_date_read_year">Jahr</string>
-    <string name="X_lbl_registration">%1$s-Registrierung</string>
     <string name="lbl_scope_of_change">Umfang der Änderung</string>
     <string name="lbl_search_filtered_by_x">Gefiltert nach: %1$s</string>
     <string name="lbl_search_for_books">Suche nach Büchern</string>
