--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -47,32 +47,24 @@
     <string name="X_action_update">Ενημέρωση</string>
     <string name="X_action_validate">Επικυρώνω</string>
     <string name="X_btn_customize">Προσαρμογή…</string>
-    <string name="X_btn_show_list">Εμφάνιση λίστας</string>
+    <string name="btn_show_list">Εμφάνιση λίστας</string>
     <string name="confirm_continue">Εισαι σιγουρος οτι θελεις να συνεχισεις;</string>
     <string name="X_error_authentication_failed">Η ταυτοποίηση απέτυχε</string>
     <string name="error_record_must_contain_column">Η εγγραφή πρέπει να περιέχει ένα πεδίο με το όνομα «%1$s».</string>
     <string name="X_error_network_site_has_problems">Ο ιστότοπος έχει προβλήματα.</string>
     <string name="X_httpErrorIO">Δεν ήταν δυνατή η επικοινωνία με τον διακομιστή. Προσπαθήστε ξανά αργότερα.</string>
-    <string name="X_info_authorized_needed">Έγκριση Πρόσβασης</string>
     <string name="X_info_not_authorized">Χωρίς άδεια</string>
     <string name="X_info_site_authorization_successful">Επιτυχής η αδειοδότηση %1$s</string>
     <string name="X_lbl_completed">Ολοκληρώθηκαν</string>
-    <string name="X_lbl_failed">Απέτυχαν</string>
     <string name="X_lbl_folder">Φάκελος</string>
     <string name="X_lbl_image">Εικόνα</string>
-    <string name="X_lbl_preferred_styles">Προτιμώμενα στυλ</string>
-    <string name="X_lbl_queue">Ουρά</string>
-    <string name="X_lbl_queued">Σε σειρά</string>
-    <string name="X_lbl_select_fields_to_update">Επιλεγξτε πεδία για ενημέρωση</string>
     <string name="X_lbl_thumbnails">Μικρογραφίες</string>
-    <string name="X_lbl_updated">ενημερώθηκαν</string>
     <string name="X_neither">κανενα απο τα δυο</string>
     <string name="X_option_bob_filter_anthology_no">Όλοι εκτός από Ανθολογίες</string>
     <string name="X_option_bob_filter_anthology_yes">Ανθολογίες</string>
     <string name="X_pg_general">Γενικά</string>
     <string name="tip_booklist_style_defaults">Χρησιμοποιήστε αυτή την οθόνη για να ορίσετε τα προεπιλεγμένα χαρακτηριστικά όλων των στυλ. Αυτά χρησιμοποιούνται από όλα τα ενσωματωμένα στυλ και ως σημείο εκκίνησης για κάθε στυλ που ορίζετε εσείς οι ίδιοι.</string>
     <string name="X_use_default_setting">Χρήση προεπιλεγμένων ρυθμίσεων</string>
-    <string name="X_vldt_failed_for_x">Η επικύρωση απέτυχε για «%1$s»</string>
     <string name="X_whichImageCaptureApplication">Λήψη εικόνας με</string>
     <string name="X_whichSendToApplication">Αποστολή μέσω</string>
     <string name="a_b">%1$s%2$s</string>
@@ -141,8 +133,6 @@
     <string name="action_more_ellipsis">Περισσότερο…</string>
     <string name="action_show_options">Επιλογές</string>
     <string name="action_show_toc_long">Εμφάνιση Πίνακα Περιεχομένων</string>
-    <string name="action_start_export">Έναρξη εξαγωγής</string>
-    <string name="action_start_import">Έναρξη εισαγωγής</string>
     <string name="action_stop_scanning">Σταματήστε τη σάρωση</string>
     <string name="btn_this_book">Αυτό το βιβλίο</string>
     <string name="size_bytes">%1$.0fB</string>
@@ -288,7 +278,6 @@
     <string name="info_calibre_content_server_extension">Η επέκταση διακομιστή περιεχομένου Caliber δεν έχει εγκατασταθεί.</string>
     <string name="lbl_certificate_ca">Πιστοποιητικό CA</string>
     <string name="lbl_certificates">πιστοποιητικών</string>
-    <string name="X_lbl_clear_filters">Διαγραφή φίλτρων</string>
     <string name="lbl_clone_style">Αντιγραφή στυλ</string>
     <string name="lbl_book_type_collection">Συλλογή</string>
     <string name="lbl_ebook_file_type">Τύπος αρχείου eBook</string>
@@ -398,7 +387,6 @@
     <string name="lbl_read_start">Ημερομηνία Εναρξης Ανάγνωσης</string>
     <string name="lbl_read_timeout">Χρονικό όριο ανάγνωσης (δευτερόλεπτα)</string>
     <string name="lbl_date_read_year">Έτος Ανάγνωσης</string>
-    <string name="X_lbl_registration">%1$s Εγγραφή</string>
     <string name="lbl_scope_of_change">Πεδίο εφαρμογής της αλλαγής</string>
     <string name="lbl_search_filtered_by_x">Φιλτράρισμα κατά: %1$s</string>
     <string name="lbl_search_for_books">Αναζήτηση για βιβλία</string>
