--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -50,32 +50,24 @@
     <string name="X_action_update">Actualizar</string>
     <string name="X_action_validate">Validar</string>
     <string name="X_btn_customize">Configurar…</string>
-    <string name="X_btn_show_list">Mostrar lista</string>
+    <string name="btn_show_list">Mostrar lista</string>
     <string name="confirm_continue">¿Estás seguro de que quieres continuar?</string>
     <string name="X_error_authentication_failed">Autenticación fallida</string>
     <string name="error_record_must_contain_column">El registro debe contener un campo llamado %1$s.</string>
     <string name="X_error_network_site_has_problems">El sitio web tiene problemas.</string>
     <string name="X_httpErrorIO">No se ha podido establecer comunicación con el servidor. Inténtalo de nuevo más tarde.</string>
-    <string name="X_info_authorized_needed">Autorizar acceso</string>
     <string name="X_info_not_authorized">No Autorizado</string>
     <string name="X_info_site_authorization_successful">Autorización satisfactoria en %1$s</string>
     <string name="X_lbl_completed">Completado</string>
-    <string name="X_lbl_failed">Fallido</string>
     <string name="X_lbl_folder">Carpeta</string>
     <string name="X_lbl_image">Imagen</string>
-    <string name="X_lbl_preferred_styles">Estilos preferidos</string>
-    <string name="X_lbl_queue">Cola</string>
-    <string name="X_lbl_queued">En cola</string>
-    <string name="X_lbl_select_fields_to_update">Seleccione campos para actualizar</string>
     <string name="X_lbl_thumbnails">Miniaturas</string>
-    <string name="X_lbl_updated">Actualizados</string>
     <string name="X_neither">Ninguno de los dos</string>
     <string name="X_option_bob_filter_anthology_no">Todos menos antologías</string>
     <string name="X_option_bob_filter_anthology_yes">Antologías</string>
     <string name="X_pg_general">General</string>
     <string name="tip_booklist_style_defaults">Utilice esta pantalla para establecer las características por defecto de todos los estilos. Éstas son utilizadas por todos los estilos incorporados y como punto de partida para cualquier estilo que defina usted mismo.</string>
     <string name="X_use_default_setting">Usar configuración predeterminada</string>
-    <string name="X_vldt_failed_for_x">Falló la validación para «%1$s»</string>
     <string name="X_whichImageCaptureApplication">Capturar imagen con</string>
     <string name="X_whichSendToApplication">Enviar con</string>
     <string name="a_b">%1$s%2$s</string>
@@ -143,8 +135,6 @@
     <string name="action_more_ellipsis">Más…</string>
     <string name="action_show_options">Opciones</string>
     <string name="action_show_toc_long">Mostrar tabla de contenido</string>
-    <string name="action_start_export">Iniciar exportación</string>
-    <string name="action_start_import">Iniciar importación</string>
     <string name="action_stop_scanning">Dejar de escanear</string>
     <string name="btn_this_book">Este libro</string>
     <string name="size_bytes">%1$.0fB</string>
@@ -301,7 +291,6 @@
     <string name="info_calibre_content_server_extension">La extensión del servidor de contenido de Calibre no está instalada.</string>
     <string name="lbl_certificate_ca">Certificado de CA</string>
     <string name="lbl_certificates">Certificados</string>
-    <string name="X_lbl_clear_filters">Borrar filtros</string>
     <string name="lbl_clone_style">Duplicar estilo</string>
     <string name="lbl_book_type_collection">Colección</string>
     <string name="lbl_ebook_file_type">Tipo de archivo eBook</string>
@@ -411,7 +400,6 @@
     <string name="lbl_read_start">Fecha de inicio de lectura</string>
     <string name="lbl_read_timeout">Tiempo de espera de lectura (segundos)</string>
     <string name="lbl_date_read_year">Año de lectura</string>
-    <string name="X_lbl_registration">Registro en %1$s</string>
     <string name="lbl_scope_of_change">Alcance del cambio</string>
     <string name="lbl_search_filtered_by_x">Filtrados por: %1$s</string>
     <string name="lbl_search_for_books">Buscar libro</string>
