--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -51,32 +51,24 @@
     <string name="X_action_update">Mettre à jour</string>
     <string name="X_action_validate">Valider</string>
     <string name="X_btn_customize">Personnaliser…</string>
-    <string name="X_btn_show_list">Afficher la liste</string>
+    <string name="btn_show_list">Afficher la liste</string>
     <string name="confirm_continue">Es-tu sur de vouloir continuer ?</string>
     <string name="X_error_authentication_failed">Authentification échouée</string>
     <string name="error_record_must_contain_column">L’enregistrement doit contenir un champ nommé « %1$s ».</string>
     <string name="X_error_network_site_has_problems">Le site Web a des problèmes.</string>
     <string name="X_httpErrorIO">Impossible d’établir une communication avec le serveur. Veuillez réessayer ultérieurement.</string>
-    <string name="X_info_authorized_needed">Autoriser l’accès</string>
     <string name="X_info_not_authorized">Non autorisé</string>
     <string name="X_info_site_authorization_successful">Autorisation %1$s accordée</string>
     <string name="X_lbl_completed">Terminé</string>
-    <string name="X_lbl_failed">Échoué</string>
     <string name="X_lbl_folder">Dossier</string>
     <string name="X_lbl_image">Image</string>
-    <string name="X_lbl_preferred_styles">Styles favoris</string>
-    <string name="X_lbl_queue">File d’attente</string>
-    <string name="X_lbl_queued">En file d’attente</string>
-    <string name="X_lbl_select_fields_to_update">Sélection des champs à mettre à jour</string>
     <string name="X_lbl_thumbnails">Miniatures</string>
-    <string name="X_lbl_updated">Mis à jour</string>
     <string name="X_neither">Non plus</string>
     <string name="X_option_bob_filter_anthology_no">Tous sauf des anthologies</string>
     <string name="X_option_bob_filter_anthology_yes">Des anthologies</string>
     <string name="X_pg_general">Général</string>
     <string name="tip_booklist_style_defaults">Cet écran permet de définir les caractéristiques par défaut de tous les styles. Celles-ci sont utilisées par tous les styles intégrés et comme point de départ pour tout style que vous définissez vous-même.</string>
     <string name="X_use_default_setting">Utiliser les paramètres par défaut</string>
-    <string name="X_vldt_failed_for_x">La validation a échoué pour « %1$s »</string>
     <string name="X_whichImageCaptureApplication">Capturer une image avec</string>
     <string name="X_whichSendToApplication">Envoyer avec</string>
     <string name="a_b">%1$s%2$s</string>
@@ -145,8 +137,6 @@
     <string name="action_more_ellipsis">Plus…</string>
     <string name="action_show_options">Options</string>
     <string name="action_show_toc_long">Afficher la table des matières</string>
-    <string name="action_start_export">Démarrer l’exportation</string>
-    <string name="action_start_import">Démarrer l’importation</string>
     <string name="action_stop_scanning">Arrêter la numérisation</string>
     <string name="btn_this_book">Ce livre</string>
     <string name="size_bytes">%1$.0fB</string>
@@ -291,7 +281,6 @@
     <string name="info_calibre_content_server_extension">L’extension du serveur de contenu Calibre n’est pas installée.</string>
     <string name="lbl_certificate_ca">Certificat CA</string>
     <string name="lbl_certificates">Certificats</string>
-    <string name="X_lbl_clear_filters">Effacer les filtres</string>
     <string name="lbl_clone_style">Cloner le style</string>
     <string name="lbl_book_type_collection">Collection</string>
     <string name="lbl_ebook_file_type">Type de fichier eBook</string>
@@ -401,7 +390,6 @@
     <string name="lbl_read_start">Date de début de lecture</string>
     <string name="lbl_read_timeout">Délai de lecture (secondes)</string>
     <string name="lbl_date_read_year">Année de lecture</string>
-    <string name="X_lbl_registration">Enregistrement %1$s</string>
     <string name="lbl_scope_of_change">Périmètre du changement</string>
     <string name="lbl_search_filtered_by_x">Données filtrées par : %1$s</string>
     <string name="lbl_search_for_books">Rechercher des livres</string>
