--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -50,32 +50,24 @@
     <string name="X_action_update">Aggiorna</string>
     <string name="X_action_validate">Convalidare</string>
     <string name="X_btn_customize">Personalizza…</string>
-    <string name="X_btn_show_list">Mostra elenco</string>
+    <string name="btn_show_list">Mostra elenco</string>
     <string name="confirm_continue">Sei sicuro di voler continuare?</string>
     <string name="X_error_authentication_failed">Autenticazione fallita</string>
     <string name="error_record_must_contain_column">Il record deve contenere un campo denominato %1$s.</string>
     <string name="X_error_network_site_has_problems">Il sito Web ha problemi.</string>
     <string name="X_httpErrorIO">Comunicazione con il server non riuscita. Riprova più tardi.</string>
-    <string name="X_info_authorized_needed">Autorizza accesso</string>
     <string name="X_info_not_authorized">Non autorizzato</string>
     <string name="X_info_site_authorization_successful">Autorizzazione %1$s concessa</string>
     <string name="X_lbl_completed">Completato</string>
-    <string name="X_lbl_failed">Errore</string>
     <string name="X_lbl_folder">Cartella</string>
     <string name="X_lbl_image">Immagine</string>
-    <string name="X_lbl_preferred_styles">Stili preferiti</string>
-    <string name="X_lbl_queue">Coda</string>
-    <string name="X_lbl_queued">In coda</string>
-    <string name="X_lbl_select_fields_to_update">Seleziona i campi da aggiornare</string>
     <string name="X_lbl_thumbnails">Miniature</string>
-    <string name="X_lbl_updated">Aggiornati</string>
     <string name="X_neither">Nessuno dei due</string>
     <string name="X_option_bob_filter_anthology_no">Tutti tranne antologie</string>
     <string name="X_option_bob_filter_anthology_yes">Antologie</string>
     <string name="X_pg_general">Generale</string>
     <string name="tip_booklist_style_defaults">Questa schermata consente di impostare le caratteristiche predefinite di tutti gli stili. Queste vengono utilizzate da tutti gli stili incorporati e come punto di partenza per qualsiasi stile definito dall\'utente.</string>
     <string name="X_use_default_setting">Utilizza le impostazioni predefinite</string>
-    <string name="X_vldt_failed_for_x">Convalida di «%1$s» non riuscita</string>
     <string name="X_whichImageCaptureApplication">Acquisisci immagine con</string>
     <string name="X_whichSendToApplication">Invia tramite</string>
     <string name="a_b">%1$s%2$s</string>
@@ -143,8 +135,6 @@
     <string name="action_more_ellipsis">Altro…</string>
     <string name="action_show_options">Opzioni</string>
     <string name="action_show_toc_long">Mostra sommario</string>
-    <string name="action_start_export">Avvia l’esportazione</string>
-    <string name="action_start_import">Avvia l’importazione</string>
     <string name="action_stop_scanning">Interrompere la scansione</string>
     <string name="btn_this_book">Questo libro</string>
     <string name="size_bytes">%1$.0fB</string>
@@ -290,7 +280,6 @@
     <string name="info_calibre_content_server_extension">L’estensione del server dei contenuti Calibre non è installata.</string>
     <string name="lbl_certificate_ca">Certificato CA</string>
     <string name="lbl_certificates">Certificati</string>
-    <string name="X_lbl_clear_filters">Cancella filtri</string>
     <string name="lbl_clone_style">Duplica stile</string>
     <string name="lbl_book_type_collection">Collezione</string>
     <string name="lbl_ebook_file_type">Tipo di file eBook</string>
@@ -400,7 +389,6 @@
     <string name="lbl_read_start">Data inizio lettura</string>
     <string name="lbl_read_timeout">Timeout lettura (secondi)</string>
     <string name="lbl_date_read_year">Leggi Anno</string>
-    <string name="X_lbl_registration">Registrazione su %1$s </string>
     <string name="lbl_scope_of_change">Intervallo modifica</string>
     <string name="lbl_search_filtered_by_x">Filtrata per: %1$s</string>
     <string name="lbl_search_for_books">Cerca per libro</string>
