--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -48,35 +48,25 @@
     <string name="X_action_update">Updaten</string>
     <string name="X_action_validate">Valideer</string>
     <string name="X_btn_customize">Aanpassen…</string>
-    <string name="X_btn_show_list">Lijst weergeven</string>
+    <string name="btn_show_list">Lijst weergeven</string>
     <string name="confirm_continue">Weet je zeker dat je door wilt gaan?</string>
     <string name="X_error_authentication_failed">Authenticatie mislukt</string>
     <string name="X_error_network_site_has_problems">De website heeft problemen.</string>
     <string name="X_httpErrorIO">Kan niet communiceren met de server. Probeer het later opnieuw.</string>
-    <string name="X_info_authorized_needed">Toegang autoriseren</string>
     <string name="X_info_not_authorized">Niet geautoriseerd</string>
     <string name="X_info_site_authorization_successful">%1$s autorisatie gelukt</string>
-    <string name="X_lbl_clear_filters">Filters wissen</string>
     <string name="X_lbl_completed">Gereed</string>
     <string name="X_lbl_created">Aangemaakt</string>
-    <string name="X_lbl_failed">Mislukt</string>
     <string name="X_lbl_folder">Map</string>
     <string name="X_lbl_image">Afbeelding</string>
-    <string name="X_lbl_preferred_styles">Voorkeursstijlen</string>
-    <string name="X_lbl_queue">Wachtrij</string>
-    <string name="X_lbl_queued">In de wachtrij</string>
-    <string name="X_lbl_registration">%1$s registratie</string>
-    <string name="X_lbl_select_fields_to_update">Selecteer bij te werken velden</string>
     <string name="X_lbl_system">(Systeem)</string>
     <string name="X_lbl_thumbnails">Miniaturen</string>
-    <string name="X_lbl_updated">Bijgewerkt</string>
     <string name="X_neither">Geen van beide</string>
     <string name="X_option_bob_filter_anthology_no">Geen Bloemlezingen</string>
     <string name="X_option_bob_filter_anthology_yes">Bloemlezingen</string>
     <string name="X_pg_general">Algemeen</string>
     <string name="tip_booklist_style_defaults">Gebruik dit scherm om de standaard kenmerken van alle stijlen in te stellen. Deze worden gebruikt door alle ingebouwde stijlen en als uitgangspunt voor elke stijl die je zelf definieert.</string>
     <string name="X_use_default_setting">Standaardinstellingen gebruiken</string>
-    <string name="X_vldt_failed_for_x">Validatie mislukt voor „%1$s”</string>
     <string name="X_whichImageCaptureApplication">Afbeelding vastleggen met</string>
     <string name="X_whichSendToApplication">Verzenden met</string>
     <string name="a_b">%1$s%2$s</string>
@@ -112,8 +102,6 @@
     <string name="action_show_options">Opties</string>
     <string name="action_show_toc_long">Inhoudsopgave weergeven</string>
     <string name="action_skip">Overslaan</string>
-    <string name="action_start_export">Start export</string>
-    <string name="action_start_import">Start import</string>
     <string name="action_stop_scanning">Stop scanning</string>
     <string name="action_synchronize">Synchroniseren</string>
     <string name="and_others">%1$s …</string>
