--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -54,32 +54,24 @@
     <string name="X_action_update">Zaktualizuj</string>
     <string name="X_action_validate">Uprawomocnić</string>
     <string name="X_btn_customize">Dostosuj…</string>
-    <string name="X_btn_show_list">Pokaż listę</string>
+    <string name="btn_show_list">Pokaż listę</string>
     <string name="confirm_continue">Jesteś pewien, że chcesz kontynuować?</string>
     <string name="X_error_authentication_failed">Uwierzytelnianie nie powiodło się</string>
     <string name="error_record_must_contain_column">Rekord musi zawierać pole o nazwie „%1$s”.</string>
     <string name="X_error_network_site_has_problems">Witryna ma problemy.</string>
     <string name="X_httpErrorIO">Nie można nawiązać połączenia z serwerem. Spróbuj ponownie później.</string>
-    <string name="X_info_authorized_needed">Autoryzuj dostęp</string>
     <string name="X_info_not_authorized">Nieautoryzowany</string>
     <string name="X_info_site_authorization_successful">Autoryzacja %1$s powiodła się</string>
     <string name="X_lbl_completed">Zakończony</string>
-    <string name="X_lbl_failed">Nie powiodło się</string>
     <string name="X_lbl_folder">Folder</string>
     <string name="X_lbl_image">Obraz</string>
-    <string name="X_lbl_preferred_styles">Preferowane style</string>
-    <string name="X_lbl_queue">Kolejka</string>
-    <string name="X_lbl_queued">W kolejce</string>
-    <string name="X_lbl_select_fields_to_update">Wybierz pola do aktualizacji</string>
     <string name="X_lbl_thumbnails">Miniatury</string>
-    <string name="X_lbl_updated">Zaktualizowano</string>
     <string name="X_neither">Żaden</string>
     <string name="X_option_bob_filter_anthology_no">Wszystkie oprócz antologii</string>
     <string name="X_option_bob_filter_anthology_yes">Antologie</string>
     <string name="X_pg_general">Ogólne</string>
     <string name="tip_booklist_style_defaults">Ten ekran służy do ustawiania domyślnych właściwości wszystkich stylów. Są one używane przez wszystkie wbudowane style i stanowią punkt wyjścia dla każdego stylu zdefiniowanego przez użytkownika.</string>
     <string name="X_use_default_setting">Użyj ustawień domyślnych</string>
-    <string name="X_vldt_failed_for_x">Walidacja pola nie powiodła się dla „%1$s”</string>
     <string name="X_whichImageCaptureApplication">Zrób zdjęcie w aplikacji</string>
     <string name="X_whichSendToApplication">Wyślij za pomocą</string>
     <string name="a_b">%1$s%2$s</string>
@@ -147,8 +139,6 @@
     <string name="action_more_ellipsis">Więcej…</string>
     <string name="action_show_options">Opcje</string>
     <string name="action_show_toc_long">Pokaż spis treści</string>
-    <string name="action_start_export">Rozpocznij eksport</string>
-    <string name="action_start_import">Rozpocznij import</string>
     <string name="action_stop_scanning">Zatrzymaj skanowanie</string>
     <string name="btn_this_book">Ta książka</string>
     <string name="size_bytes">%1$.0fB</string>
@@ -306,7 +296,6 @@
     <string name="info_calibre_content_server_extension">Rozszerzenie serwera treści Calibre nie jest zainstalowane.</string>
     <string name="lbl_certificate_ca">Certyfikat urzędu certyfikacji</string>
     <string name="lbl_certificates">Certyfikaty</string>
-    <string name="X_lbl_clear_filters">Wyczyść filtry</string>
     <string name="lbl_clone_style">Duplikat stylu</string>
     <string name="lbl_book_type_collection">Kolekcja</string>
     <string name="lbl_ebook_file_type">Typ pliku eBook</string>
@@ -416,7 +405,6 @@
     <string name="lbl_read_start">Data rozpoczęcia czytania</string>
     <string name="lbl_read_timeout">Limit czasu odczytu (sekundy)</string>
     <string name="lbl_date_read_year">Przeczytaj rok</string>
-    <string name="X_lbl_registration">Rejestracja w %1$s</string>
     <string name="lbl_scope_of_change">Zakres zmiany</string>
     <string name="lbl_search_filtered_by_x">Filtrowane według: %1$s</string>
     <string name="lbl_search_for_books">Szukaj książek</string>
