--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -53,32 +53,24 @@
     <string name="X_action_update">Обновить</string>
     <string name="X_action_validate">проверять</string>
     <string name="X_btn_customize">Настроить…</string>
-    <string name="X_btn_show_list">Показать список</string>
+    <string name="btn_show_list">Показать список</string>
     <string name="confirm_continue">Вы уверены что хотите продолжить?</string>
     <string name="X_error_authentication_failed">Ошибка аутентификации</string>
     <string name="error_record_must_contain_column">Запись должна содержать поле с именем «%1$s».</string>
     <string name="X_error_network_site_has_problems">На сайте есть проблемы.</string>
     <string name="X_httpErrorIO">Не удалось подключиться к серверу. Повторите попытку позже.</string>
-    <string name="X_info_authorized_needed">Авторизация</string>
     <string name="X_info_not_authorized">Не авторизовано</string>
     <string name="X_info_site_authorization_successful">Авторизация %1$s прошла успешно</string>
     <string name="X_lbl_completed">Завершено</string>
-    <string name="X_lbl_failed">Неудача</string>
     <string name="X_lbl_folder">Папка</string>
     <string name="X_lbl_image">Изображение</string>
-    <string name="X_lbl_preferred_styles">Предпочитаемые стили</string>
-    <string name="X_lbl_queue">Очередь</string>
-    <string name="X_lbl_queued">В очереди</string>
-    <string name="X_lbl_select_fields_to_update">Выберите поля для обновления</string>
     <string name="X_lbl_thumbnails">Миниатюры</string>
-    <string name="X_lbl_updated">Oбновлено</string>
     <string name="X_neither">Ни один</string>
     <string name="X_option_bob_filter_anthology_no">Все, кроме антологий</string>
     <string name="X_option_bob_filter_anthology_yes">Антологии</string>
     <string name="X_pg_general">Основные</string>
     <string name="tip_booklist_style_defaults">На этом экране задаются характеристики по умолчанию для всех стилей. Они используются всеми встроенными стилями и являются отправной точкой для любого стиля, который вы определяете самостоятельно.</string>
     <string name="X_use_default_setting">Использовать настройки по умолчанию</string>
-    <string name="X_vldt_failed_for_x">Проверка не удалась для «%1$s»</string>
     <string name="X_whichImageCaptureApplication">Делать снимки с помощью</string>
     <string name="X_whichSendToApplication">Выберите приложение</string>
     <string name="a_b">%1$s%2$s</string>
@@ -146,8 +138,6 @@
     <string name="action_more_ellipsis">Ещё…</string>
     <string name="action_show_options">Параметры</string>
     <string name="action_show_toc_long">Показать оглавление</string>
-    <string name="action_start_export">Начать экспорт</string>
-    <string name="action_start_import">Начать импорт</string>
     <string name="action_stop_scanning">Остановить сканирование</string>
     <string name="btn_this_book">Эта книга</string>
     <string name="size_bytes">%1$.0fB</string>
@@ -303,7 +293,6 @@
     <string name="info_calibre_content_server_extension">Расширение сервера содержимого Caliber не установлено.</string>
     <string name="lbl_certificate_ca">Сертификат центра сертификации</string>
     <string name="lbl_certificates">Cертификаты</string>
-    <string name="X_lbl_clear_filters">Сбросить фильтры</string>
     <string name="lbl_clone_style">Клонировать стиль</string>
     <string name="lbl_book_type_collection">Коллекция</string>
     <string name="lbl_ebook_file_type">Тип файла электронной книги</string>
@@ -413,7 +402,6 @@
     <string name="lbl_read_start">Начало чтения</string>
     <string name="lbl_read_timeout">Таймаут чтения (секунды)</string>
     <string name="lbl_date_read_year">Год прочтения</string>
-    <string name="X_lbl_registration">Регистрация в %1$s</string>
     <string name="lbl_scope_of_change">Масштаб изменения</string>
     <string name="lbl_search_filtered_by_x">Фильтр: %1$s</string>
     <string name="lbl_search_for_books">Поиск книг</string>
