--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -47,32 +47,24 @@
     <string name="X_action_update">Güncelle</string>
     <string name="X_action_validate">Doğrulama</string>
     <string name="X_btn_customize">Kişiselleştir…</string>
-    <string name="X_btn_show_list">Gösteri listesi</string>
+    <string name="btn_show_list">Gösteri listesi</string>
     <string name="confirm_continue">Devam etmek istediğine emin misin?</string>
     <string name="X_error_authentication_failed">Kimlik doğrulama başarısız oldu</string>
     <string name="error_record_must_contain_column">Kayıt, “%1$s” adlı bir alan içermelidir.</string>
     <string name="X_error_network_site_has_problems">Web sitesinde sorunlar var.</string>
     <string name="X_httpErrorIO">Sunucuyla iletişim kurulamadı. Daha sonra tekrar deneyin.</string>
-    <string name="X_info_authorized_needed">Erişime izin ver</string>
     <string name="X_info_not_authorized">Yetkilendirilmemiş</string>
     <string name="X_info_site_authorization_successful">%1$s yetkilendirmesi başarılı</string>
     <string name="X_lbl_completed">Tamamlandı</string>
-    <string name="X_lbl_failed">Başarısız</string>
     <string name="X_lbl_folder">Klasör</string>
     <string name="X_lbl_image">Resim</string>
-    <string name="X_lbl_preferred_styles">Yeğlenen biçemler</string>
-    <string name="X_lbl_queue">Kuyruk</string>
-    <string name="X_lbl_queued">Kuyrukta</string>
-    <string name="X_lbl_select_fields_to_update">Güncellenecek alanları seçin</string>
     <string name="X_lbl_thumbnails">Ufak resimler</string>
-    <string name="X_lbl_updated">Güncellendi</string>
     <string name="X_neither">Hiç biri</string>
     <string name="X_option_bob_filter_anthology_no">Antolojiler hariç hepsi</string>
     <string name="X_option_bob_filter_anthology_yes">Antolojiler</string>
     <string name="X_pg_general">Genel</string>
     <string name="tip_booklist_style_defaults">Tüm stillerin varsayılan özelliklerini ayarlamak için bu ekranı kullanın. Bunlar tüm yerleşik stiller tarafından ve kendi tanımladığınız herhangi bir stil için başlangıç noktası olarak kullanılır.</string>
     <string name="X_use_default_setting">Varsayılan ayarları kullan</string>
-    <string name="X_vldt_failed_for_x">“%1$s” için doğrulama başarısız</string>
     <string name="X_whichImageCaptureApplication">Fotoğraf çekmek için şu uygulamayı kullan</string>
     <string name="X_whichSendToApplication">Göndermek için kullanılacak uygulama</string>
     <string name="a_b">%1$s%2$s</string>
@@ -140,8 +132,6 @@
     <string name="action_more_ellipsis">Diğer…</string>
     <string name="action_show_options">Seçenekler</string>
     <string name="action_show_toc_long">İçindekiler Tablosunu Göster</string>
-    <string name="action_start_export">Dışa aktarmayı başlat</string>
-    <string name="action_start_import">İçe aktarmayı başlat</string>
     <string name="action_stop_scanning">Taramayı durdur</string>
     <string name="btn_this_book">Bu kitap</string>
     <string name="size_bytes">%1$.0fB</string>
@@ -293,7 +283,6 @@
     <string name="info_calibre_content_server_extension">Calibre içerik sunucusu uzantısı kurulu değil.</string>
     <string name="lbl_certificate_ca">CA sertifikası</string>
     <string name="lbl_certificates">Sertifikalar</string>
-    <string name="X_lbl_clear_filters">Filtreleri Temizle</string>
     <string name="lbl_clone_style">Biçemi çoğalt</string>
     <string name="lbl_book_type_collection">Toplamak</string>
     <string name="lbl_ebook_file_type">e-Kitap dosya türü</string>
@@ -403,7 +392,6 @@
     <string name="lbl_read_start">Okumaya başlanan tarih</string>
     <string name="lbl_read_timeout">Okuma zaman aşımı (saniye)</string>
     <string name="lbl_date_read_year">Okuma yılı</string>
-    <string name="X_lbl_registration">%1$s Kayıt</string>
     <string name="lbl_scope_of_change">Değişiklik kapsamı</string>
     <string name="lbl_search_filtered_by_x">Filtre ölçütü: %1$s</string>
     <string name="lbl_search_for_books">Kitap ara</string>
